# traderplusplus

./: .gitignore  CNAME  LICENSE-FAQ.md  README.md  equity_curve.csv  index.html  main.py  product_roadmap.md  pyproject.toml  requirements.txt  run_backtest.py  run_backtest_bkp.py  scratch.ipynb  streamlit_app.py  trade_log.csv
analytics/: performance.py  performance_evaluator.py
brokers/: alpaca_api.py
contracts/: asset.py  order.py  portfolio.py  trade_log.py  utils.py
core/: backtester.py  data_loader.py  executor.py  market_data.py  visualizer.py
core/executors/: __init__.py  backtest.py  base.py  live.py  paper.py
core/guardrails/: base.py  trailing_stop_loss.py
dashboard/: streamlit_app.py
data_ingestion/: alpaca_fetcher.py  polygon_fetcher.py  test_alpaca_fetch.py  yahoo_fetcher.py
executors/: backtest.py  base.py
guardrails/: __init__.py  base.py  trailing_stop_loss.py
logs/: equity_curve.csv  trade_log.csv
run/: backtester.sh  live.sh  paper.sh
strategies/: __init__.py  base.py
strategies/multi_asset/: __init__.py  capm_portfolio.py
strategies/single_asset/: __init__.py  buy_n_hold.py  momentum.py  no_invest.py  stoploss.py
strategies/stock/: __init__.py  base.py  buy_n_hold.py  capm_portfolio.py  momentum.py  no_invest.py
utils/: config.py  logger.py  metrics.py  utils.py
