[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traderplusplus"
version = "0.1.0"
description = "Trader++ is a modular, realistic, and hackable trading engine for strategy backtesting and portfolio simulation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
  {name = "Rohitashwa Chakraborty", email = "rohitashwachaks@gmail.com"},
]
keywords = ["quant", "trading", "backtesting", "portfolio", "simulation", "finance"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "matplotlib>=3.4",
  "plotly>=5.0",
  "typer[all]>=0.9",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "ipykernel"]
ui = ["streamlit"]

[project.urls]
Homepage = "https://github.com/yourusername/traderplusplus"
Documentation = "https://github.com/yourusername/traderplusplus/wiki"
Source = "https://github.com/yourusername/traderplusplus"
Issues = "https://github.com/yourusername/traderplusplus/issues"